--- a/static/css/index.css
+++ b/static/css/index.css
@@ -7,176 +7,37 @@ main {
     font-family: "Sukhumvit Set", sans-serif;
     color: black;
     background-color:rgb(44, 44, 44); /* Cambia el color según tus preferencias */
-    padding: 20px; /* Ajusta el relleno según tus necesidades */
-}
-
-.navbar {
-    height: 100px; /* Ajusta la altura según tus necesidades */
-}
-
-.custom-navbar {
-    background-color:rgb(44, 44, 44); /* Cambia esto al color que desees */
-}
-.custom-bg {
-    background-color:gray; /* Cambia esto al color que desees */
-    color: hsl(16, 100%, 50%);
-    border: 2px solid red; /* Cambia esto al color que desees para las líneas */
-}
-.custom-toggler-icon {
-    color: red; /* Cambia esto al color que desees para las líneas del icono */
-}
-
-.custom-text:hover {
-    color: gray; /* Cambia esto al color que desees al pasar el puntero */
-}
-
-.custom-text {
-    color: hsl(16, 100%, 50%);
-    font-size: 1.3rem;
-    text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.8); /* Sombra negra */
-}
-
-.custom-text:active,
-.custom-text:focus {
-    color: gray;
-}
-
-
-
-/* Clase personalizada para cambiar el color de fondo del menú desplegable */
-.dropdown-menu {
-    background-color: gray; /* Cambia esto al color que desees para el fondo del menú */
-}
-.dropdown-menu ::selection {
-    background-color: gray; /* Cambia esto al color que desees para la selección del texto */
-    color: darkgrey; /* Cambia esto al color que desees para el texto seleccionado */
-}
-
-
-.dropdown-menu .custom-text {
-    /* Establece el color del texto */
-    color: black; /* Cambia esto al color que desees para el texto */
-    /* Cambia el tipo de letra (fuente) */
-    font-family: 'Arial', sans-serif; /* Cambia 'Arial' a la fuente que desees */
-    font-size: medium;
-}
-
-.col {
-    text-align: center;
-}
-
-h1 {
-    color: #000000;
-}
-
-.galeria {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.galeria .card {
-    background-color: rgb(44, 44, 44);
-    /*color: #fff;*/
-    width: calc(33.33% - 5px);
-    margin-bottom: 5px;
-    /*box-sizing: border-box;*/
-    /*border-color: #1f1e1e;*/
-    border-radius: 8px;
-    border: none;
-    padding:10px;
-    /*overflow: hidden;*
-    /* Para que las esquinas redondeadas se apliquen correctamente */
-    position: relative;
-    /*box-shadow: 0 4px 8px rgb(0, 0, 0);*/
-    transition: box-shadow 0.3s ease;
-    /* Transición suave para el efecto de sombra */
-}
-
-.galeria .card img {
-    width: 75%;
-    border-radius: 4px;
-    transition: transform 0.3s ease;
-    box-shadow: 0 4px 8px rgb(0, 0, 0);
-    /* Transición suave para el efecto de escala */
-}
-
-.galeria .card:hover img {
-    transform: scale(1.03);
-    /* Efecto de escala al pasar el ratón */
-}
-
-.card-body {
-    padding: 15
-    px;
-    background-color: rgb(44, 44, 44);
-    border-radius: 6px;
-}
-
-.card-text {
-    color: #000000;
-    font-weight: 100;
-}
-
-.card-img-top {
-    margin: auto;
-    display: block;
-}
-#myModal {
-    display: none; /* Oculta el modal por defecto */
-    position: fixed;
-    z-index: 1050; /* Nivel de superposición */
-    left: 0;
-    top: 0;
-    width: 100vw; /* Ocupa todo el ancho visible */
-    height: 100vh; /* Ocupa todo el alto visible */
-    background-color: rgba(0, 0, 0, 0.9); /* Fondo oscuro */
-    justify-content: center;
-    align-items: center;
-    flex-direction: column; /* Apila los elementos en columna */
-    overflow: hidden; /* Evita barras de desplazamiento */
-}
-
-#imgModal {
-        max-width: 100%; /* Máximo ancho: 90% del ancho visible */
-        max-height: 100%; /* Máximo alto: 90% del alto visible */
-        object-fit: contain; /* Ajusta la imagen sin deformarla */
-        border: 2px solid #0f0b0b; /* Borde blanco para la imagen */
-        display: block;
-        margin: 0 auto; /* Centra la imagen horizontalmente */
-        margin-top: 30px; /* Ajusta la posición vertical de la imagen */
-}
-
-#caption {
-    text-align: center;
-    color: #fff; /* Texto blanco para contraste */
-    margin-top: 10px; /* Espacio entre la imagen y el texto */
-    font-size: 16px; /* Ajusta el tamaño del texto */
-    max-width: 90%; /* Asegura que el texto no exceda el ancho de la imagen */
-    word-wrap: break-word; /* Permite que el texto se ajuste si es muy largo */
-    margin: 0 auto; /* Centra la imagen horizontalmente */
-}
-
-.close {
-    position: absolute;
-    top: 10px; /* Posición desde la parte superior */
-    right: 20px; /* Posición desde la parte derecha */
-    color: white;
-    font-size: 30px; /* Tamaño del botón */
-    font-weight: bold;
-    cursor: pointer;
-    background: none;
-    border: none;
-    outline: none;
+    padding: 20px; /* Agrega un espacio interno de 20 píxeles alrededor del contenido. */
 }
 
 
 #tituloGaleria {
     color: hsl(16, 100%, 50%);
-    font-size: 2.5rem;
+    font-size: 2.0rem;
     text-align: center;
+    margin-top: 20px;
     margin-bottom: 20px; /* Espacio entre el título y la galería */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); /* Sombra negra */
 }
+
+div {
+    display: flex;
+    justify-content: center; /* Centra la imagen horizontalmente */
+    align-items: center; /* Centra la imagen verticalmente si es necesario */
+    width: 100%; /* Ocupa todo el ancho disponible */
+}
+
+
+#portada {
+    max-width:100%; /* La imagen no excederá el ancho del contenedor */
+    max-height: 100vh;   /* La imagen no excederá el ancho del contenedor */    
+    height: auto; /* Mantiene las proporciones de la imagen */
+    display: block; /* Elimina el espacio extra debajo de la imagen */
+    margin: 0 auto; /* Centra la imagen horizontalmente */
+    object-fit: contain; /* Mantiene la proporción de la imagen */
+}
+
+
+
+
+
