--- a/templates/index.html
+++ b/templates/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-    <div class="container mx-auto text-center">
+    <div class="container" id="principal">
         <div class="row">
             <div >
                 <h1 id="tituloGaleria">BT PHOTO</h1>
             </div>
             <div class="row">
                 <div>
-                    <a href="{{ url_for('home') }}" class="shutter-link"><img src="{{ url_for('static', filename='images/326705437_1361997627944281_8558405969671320208_n.jpg') }}" alt="" /></a>
+                    <a href="{{ url_for('home') }}" ><img id="portada" src="{{ url_for('static', filename='images/326705437_1361997627944281_8558405969671320208_n.jpg') }}" alt="" /></a>
                 </div>
             </div>
             <div class="row">
@@ -27,22 +27,8 @@
                     <a href="{{ url_for('home') }}" class="shutter-link">ENTRAR</a>
                 </div>
             </div>
-            <div class="shutter-overlay"></div>
         </div>
     </div>   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-        <script>
-            document.addEventListener("DOMContentLoaded", function() {
-                const shutterLink = document.querySelector(".shutter-link");
-            
-                shutterLink.addEventListener("click", function(e) {
-                    e.preventDefault();  // Evitar que el enlace redireccione
-                    document.body.classList.toggle("shutter-active");
-                });
-            });
-        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 </body>
